# toolrouter

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
tests/: test_toolrouter.py
toolrouter/: __init__.py  corpus.py  eval.py  registry.py  router.py
