[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolrouter"
version = "0.1.0"
description = "Pick the right tool from a big toolbox and know when to abstain. Confidence-gated tool selection with a benchmark that rewards not guessing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "agents", "tool-use", "function-calling", "routing", "mcp", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/toolrouter"

[tool.hatch.build.targets.wheel]
packages = ["toolrouter"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
